--- a/frontend/app/src/main/res/layout/item_sent_message.xml
+++ b/frontend/app/src/main/res/layout/item_sent_message.xml
@@ -11,8 +11,9 @@
         android:layout_marginStart="64dp"
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
-        android:background="#cccccc"
+        android:background="@drawable/sent_text_rounded_view"
         android:clickable="false"
+        android:fontFamily="@font/proxima_nova"
         android:padding="8dp"
         android:text="Hello this is a sample message"
         android:textSize="16sp" />
