--- a/frontend/app/src/main/res/xml/settings.xml
+++ b/frontend/app/src/main/res/xml/settings.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <EditTextPreference
         android:defaultValue="Default value"
         android:key="preference_first_name"
-        android:selectAllOnFocus="true"
-        android:title="Change your first name"
         android:persistent="false"
-        />
+        android:selectAllOnFocus="true"
+        android:title="First name"
+        android:layout="@layout/preference"
+        tools:ignore="PrivateResource"
+        app:useSimpleSummaryProvider="true" />
 
     <EditTextPreference
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:defaultValue="Default value"
         android:key="preference_last_name"
-        android:selectAllOnFocus="true"
         android:persistent="false"
-        android:title="Change your last name" />
+        android:selectAllOnFocus="true"
+        android:title="Last name"
+        android:layout="@layout/preference"
+        tools:ignore="PrivateResource"
+        app:useSimpleSummaryProvider="true" />
 
     <Preference
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:defaultValue="Logout"
         android:key="Logout"
-        android:selectAllOnFocus="true"
         android:persistent="false"
-        android:title="Logout" />
+        android:selectAllOnFocus="true"
+        android:title="Logout"
+        android:layout="@layout/preference"
+        tools:ignore="PrivateResource" />
 </PreferenceScreen>
