--- a/frontend/app/src/main/res/layout/activity_login.xml
+++ b/frontend/app/src/main/res/layout/activity_login.xml
@@ -13,21 +13,34 @@
 
     <EditText
         android:id="@+id/first_name"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/input_box_def"
+        android:fontFamily="@font/proxima_nova"
         android:hint="@string/prompt_first_name"
         android:inputType="textPersonName"
         android:selectAllOnFocus="true"
+        android:textAlignment="viewStart"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.156"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/last_name"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+        android:textAlignment="viewStart"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:fontFamily="@font/proxima_nova"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="33dp"
+        android:background="@drawable/input_box_def"
         android:hint="@string/prompt_last_name"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
@@ -39,9 +52,15 @@
 
     <EditText
         android:id="@+id/email"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+        android:textAlignment="viewStart"
+        android:fontFamily="@font/proxima_nova"
+        android:textSize="14sp"
+        android:textStyle="bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="33dp"
+        android:background="@drawable/input_box_def"
         android:hint="@string/prompt_email"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
@@ -53,9 +72,15 @@
 
     <EditText
         android:id="@+id/wallet_profile"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+        android:textAlignment="viewStart"
+        android:fontFamily="@font/proxima_nova"
+        android:textSize="14sp"
+        android:textStyle="bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="33dp"
+        android:background="@drawable/input_box_def"
         android:hint="@string/prompt_wallet_address"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
@@ -67,34 +92,45 @@
 
     <EditText
         android:id="@+id/username"
+        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+        android:textAlignment="viewStart"
+        android:fontFamily="@font/proxima_nova"
+        android:textSize="14sp"
+        android:textStyle="bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="33dp"
+        android:background="@drawable/input_box_def"
         android:hint="@string/prompt_username"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
         android:inputType="textPersonName"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.156"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wallet_profile" />
 
     <TextView
         android:id="@+id/tolerance_text"
-        android:layout_width="189dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:fontFamily="@font/proxima_nova_regular"
         android:text="Current risk tolerance (%): 50"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
 
     <TextView
         android:id="@+id/aggressiveness_text"
-        android:layout_width="189dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/proxima_nova_regular"
         android:text="Current investment aggressiveness (%): 50"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBarLogin" />
@@ -107,6 +143,8 @@
         android:max="100"
         android:min="0"
         android:progress="50"
+        android:thumbTint="#464746"
+        android:progressTint="#7C7C7C"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tolerance_text" />
@@ -118,6 +156,8 @@
         android:layout_marginTop="16dp"
         android:max="100"
         android:min="0"
+        android:thumbTint="#464746"
+        android:progressTint="#7C7C7C"
         android:progress="50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -128,7 +168,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="44dp"
         android:enabled="false"
         android:text="@string/action_register"
         app:layout_constraintBottom_toBottomOf="parent"
