--- a/frontend/app/src/main/res/layout/activity_profile.xml
+++ b/frontend/app/src/main/res/layout/activity_profile.xml
@@ -9,54 +9,56 @@
 
     <TextView
         android:id="@+id/wallet_address"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="148dp"
         android:text="TextView"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/follow_button"
+        app:layout_constraintBottom_toTopOf="@+id/friend_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.27"
         tools:text="@string/wallet_name" />
 
     <ImageView
         android:id="@+id/profile_default_pic"
-        android:layout_width="161dp"
-        android:layout_height="141dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/profile_username"
+        app:layout_constraintBottom_toTopOf="@+id/wallet_address"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.26"
         tools:srcCompat="@drawable/shang_chi_stock_photo"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/profile_username"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
         android:text="TextView"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/friend_button"
+        app:layout_constraintBottom_toBottomOf="@+id/wallet_chart"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.27"
+        app:layout_constraintVertical_bias="0.18"
         tools:text="@string/profile_name" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/friend_button"
-        android:layout_width="414dp"
-        android:layout_height="48dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:checkable="true"
+        android:fontFamily="@font/proxima_nova_regular"
         android:text="@string/add_friend_button"
         android:textColor="#455A64"
         app:backgroundTint="@color/friend_button"
@@ -65,10 +67,10 @@
         app:iconGravity="textEnd"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.414" />
+        app:layout_constraintVertical_bias="0.298" />
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/wallet_chart"
@@ -90,6 +92,11 @@
         android:layout_weight="1"
         android:contentDescription="@string/time_opt_default"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:backgroundTint="#E6E6E6"
+        android:backgroundTintMode="add"
+        android:elevation="8dp"
+        android:foregroundTint="#B6B4B4"
+        android:popupElevation="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
