--- a/frontend/app/src/main/res/layout/item_received_message.xml
+++ b/frontend/app/src/main/res/layout/item_received_message.xml
@@ -4,24 +4,28 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/nameTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:id="@+id/nameTxt"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:fontFamily="@font/proxima_nova"
+        android:layout_marginBottom="4dp"
         android:text="Name"
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/receivedTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/nameTxt"
-        android:background="@color/colorPrimary"
-        android:textColor="#ffffff"
-        android:padding="8dp"
-        android:layout_marginEnd="64dp"
         android:layout_marginBottom="4dp"
-        android:textSize="16sp"
-        android:id="@+id/receivedTxt"
-        android:text="Hello this is a sample text"/>
+        android:background="@drawable/received_text_rounded_view"
+        android:fontFamily="@font/proxima_nova"
+        android:padding="8dp"
+        android:text="Hello this is a sample text"
+        android:textColor="#353434"
+        android:textSize="16sp" />
 
 </RelativeLayout>
