--- a/frontend/app/src/main/res/values/themes.xml
+++ b/frontend/app/src/main/res/values/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.Tyfw" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/light_sea_green</item>
-        <item name="colorPrimaryVariant">@color/light_sea_green</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimary</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -12,7 +12,6 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-
     </style>
     <style name="Theme.Tyfw.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -20,4 +19,11 @@
     </style>
     <style name="Theme.Tyfw.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="Theme.Tyfw.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:fontFamily">@font/proxima_nova_regular</item>
+        <item
+            name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
 </resources>
