--- a/frontend/app/src/main/res/layout/activity_ai_prediction.xml
+++ b/frontend/app/src/main/res/layout/activity_ai_prediction.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/proxima_nova_regular"
         android:text="AI Prediction"
         android:textSize="32dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,8 +23,9 @@
         android:layout_width="388dp"
         android:layout_height="254dp"
         android:layout_marginTop="12dp"
-        android:text="This is our app's AI recommendation for your portfolio. Our predictions are powered by AI and machine learning and are tailored based on your personal risk tolerance and investment aggressiveness.\n Higher risk tolerance: less likely to sell on a low predicted price.\n Lower investment aggressiveness: more likely to buy when the predicted price is larger than today's price.
-        To change these values simply move the slider below. Once you change the risk tolerance please give our app a moment to update it's prediction."
+        android:fontFamily="@font/proxima_nova_regular"
+        android:text="This is our app's AI recommendation for your portfolio! Powered by AI and machine learning, our predictions are tailored based on your personal risk tolerance and investment aggressiveness.\n Higher risk tolerance: less likely to sell on a low predicted price.\n Lower investment aggressiveness: more likely to buy when the predicted price is larger than today's price.         To change these values simply move the slider below. Once you change the risk tolerance please give our app a moment to update it's prediction."
+        android:textAlignment="center"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.478"
@@ -39,7 +41,7 @@
         android:min="0"
         android:progress="50"
         app:layout_constraintTop_toBottomOf="@+id/seekBarTitle"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="-46dp" />
 
     <SeekBar
         android:id="@+id/seekBarAgg"
@@ -57,31 +59,37 @@
         android:layout_width="233dp"
         android:layout_height="35dp"
         android:layout_marginTop="16dp"
-        android:text="Risk Tolerance: 50%"
+        android:fontFamily="@font/proxima_nova_regular"
+        android:text="Risk Tolerance:\n50%"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ai_description" />
 
     <TextView
         android:id="@+id/seekBarTitleAgg"
-        android:layout_width="233dp"
-        android:layout_height="35dp"
+        android:layout_width="319dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Investment Aggressiveness Tolerance: 50%"
+        android:fontFamily="@font/proxima_nova_regular"
+        android:text="Investment Aggressiveness Tolerance:\n50%"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 
     <TextView
         android:id="@+id/ai_results"
-        android:layout_width="392dp"
-        android:layout_height="75dp"
-        android:layout_marginBottom="52dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:fontFamily="@font/proxima_nova_regular"
         android:text="temp"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textAlignment="center"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.157"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarAgg" />
 </androidx.constraintlayout.widget.ConstraintLayout>
