--- a/frontend/app/src/main/res/layout/activity_ai_prediction.xml
+++ b/frontend/app/src/main/res/layout/activity_ai_prediction.xml
@@ -4,44 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".AiPredictionActivity">
 
-    <TextView
-        android:id="@+id/ai_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/proxima_nova_regular"
-        android:text="AI Prediction"
-        android:textSize="32dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/ai_description"
-        android:layout_width="388dp"
-        android:layout_height="254dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/proxima_nova_regular"
-        android:text="This is our app's AI recommendation for your portfolio! Powered by AI and machine learning, our predictions are tailored based on your personal risk tolerance and investment aggressiveness.\n Higher risk tolerance: less likely to sell on a low predicted price.\n Lower investment aggressiveness: more likely to buy when the predicted price is larger than today's price.         To change these values simply move the slider below. Once you change the risk tolerance please give our app a moment to update it's prediction."
-        android:textAlignment="center"
-        android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ai_title" />
-
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:max="100"
-        android:min="0"
-        android:progress="50"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarTitle"
-        tools:layout_editor_absoluteX="-46dp" />
+    <Button
+        android:id="@+id/risk_button"
+        android:layout_width="128dp"
+        android:layout_height="39dp"
+        android:text="more info"
+        android:textSize="12sp"
+        app:iconTint="#474242"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarTitle"
+        app:layout_constraintEnd_toEndOf="@+id/seekBarTitle"
+        app:layout_constraintStart_toStartOf="@+id/seekBarTitle"
+        app:layout_constraintTop_toBottomOf="@+id/ai_description"
+        app:layout_constraintVertical_bias="0.447" />
 
     <SeekBar
         android:id="@+id/seekBarAgg"
@@ -54,27 +31,55 @@
         app:layout_constraintTop_toBottomOf="@+id/seekBarTitleAgg"
         tools:layout_editor_absoluteX="0dp" />
 
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:max="100"
+        android:min="0"
+        android:progress="50"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarTitle"
+        tools:layout_editor_absoluteX="-46dp" />
+
+    <TextView
+        android:id="@+id/ai_description"
+        android:layout_width="385dp"
+        android:layout_height="201dp"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/proxima_nova_regular"
+        android:text="This is our app's AI recommendation for your portfolio!\n\n Powered by AI and machine learning, our predictions are tailored based on your personal risk tolerance and investment aggressiveness.\n \n Adjust your values by moving the slider below. Once you change the risk tolerance please give our app a moment to update its prediction."
+        android:textAlignment="center"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ai_title" />
+
     <TextView
         android:id="@+id/seekBarTitle"
         android:layout_width="233dp"
         android:layout_height="35dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="76dp"
         android:fontFamily="@font/proxima_nova_regular"
         android:text="Risk Tolerance:\n50%"
         android:textAlignment="center"
+        android:tooltipText="Higher risk tolerance: less likely to sell on a low predicted price."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ai_description" />
 
     <TextView
         android:id="@+id/seekBarTitleAgg"
-        android:layout_width="319dp"
-        android:layout_height="wrap_content"
+        android:layout_width="259dp"
+        android:layout_height="38dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/proxima_nova_regular"
         android:text="Investment Aggressiveness Tolerance:\n50%"
         android:textAlignment="center"
+        android:tooltipText=" Lower investment aggressiveness: more likely to buy when the predicted price is larger than today's price."
         app:layout_constraintEnd_toEndOf="parent"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 
@@ -92,4 +97,16 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBarAgg" />
+
+    <TextView
+        android:id="@+id/ai_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/proxima_nova_regular"
+        android:text="AI Prediction"
+        android:textSize="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
