minor fixes and final changes

--- a/frontend/app/src/main/res/layout/activity_login.xml
+++ b/frontend/app/src/main/res/layout/activity_login.xml
@@ -26,26 +26,26 @@
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
+        app:layout_constraintHorizontal_bias="0.906"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/last_name"
         style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-        android:textAlignment="viewStart"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:fontFamily="@font/proxima_nova"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/input_box_def"
+        android:fontFamily="@font/proxima_nova"
         android:hint="@string/prompt_last_name"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
         android:inputType="textPersonName"
         android:selectAllOnFocus="true"
+        android:textAlignment="viewStart"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/first_name" />
@@ -53,19 +53,19 @@
     <EditText
         android:id="@+id/email"
         style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-        android:textAlignment="viewStart"
-        android:fontFamily="@font/proxima_nova"
-        android:textSize="14sp"
-        android:textStyle="bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/input_box_def"
+        android:fontFamily="@font/proxima_nova"
         android:hint="@string/prompt_email"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
+        android:textAlignment="viewStart"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/last_name" />
@@ -73,19 +73,19 @@
     <EditText
         android:id="@+id/wallet_profile"
         style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-        android:textAlignment="viewStart"
-        android:fontFamily="@font/proxima_nova"
-        android:textSize="14sp"
-        android:textStyle="bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/input_box_def"
+        android:fontFamily="@font/proxima_nova"
         android:hint="@string/prompt_wallet_address"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
         android:inputType="textPersonName"
         android:selectAllOnFocus="true"
+        android:textAlignment="viewStart"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
@@ -93,21 +93,20 @@
     <EditText
         android:id="@+id/username"
         style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-        android:textAlignment="viewStart"
-        android:fontFamily="@font/proxima_nova"
-        android:textSize="14sp"
-        android:textStyle="bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/input_box_def"
+        android:fontFamily="@font/proxima_nova"
         android:hint="@string/prompt_username"
         android:imeActionLabel="@string/action_register_short"
         android:imeOptions="actionDone"
         android:inputType="textPersonName"
         android:selectAllOnFocus="true"
+        android:textAlignment="viewStart"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.156"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wallet_profile" />
 
@@ -119,9 +118,12 @@
         android:fontFamily="@font/proxima_nova_regular"
         android:text="Current risk tolerance (%): 50"
         android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintTop_toBottomOf="@+id/username"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/aggressiveness_text"
@@ -131,9 +133,11 @@
         android:fontFamily="@font/proxima_nova_regular"
         android:text="Current investment aggressiveness (%): 50"
         android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBarLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/seekBarLogin"
+        app:layout_constraintVertical_bias="0.147" />
 
     <SeekBar
         android:id="@+id/seekBarLogin"
@@ -143,11 +147,14 @@
         android:max="100"
         android:min="0"
         android:progress="50"
-        android:thumbTint="#464746"
         android:progressTint="#7C7C7C"
+        android:thumbTint="#464746"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tolerance_text" />
+        app:layout_constraintTop_toBottomOf="@+id/tolerance_text"
+        app:layout_constraintVertical_bias="0.009" />
 
     <SeekBar
         android:id="@+id/seekBarLoginAgg"
@@ -156,12 +163,14 @@
         android:layout_marginTop="16dp"
         android:max="100"
         android:min="0"
-        android:thumbTint="#464746"
-        android:progressTint="#7C7C7C"
         android:progress="50"
+        android:progressTint="#7C7C7C"
+        android:thumbTint="#464746"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/aggressiveness_text" />
+        app:layout_constraintTop_toBottomOf="@+id/aggressiveness_text"
+        app:layout_constraintVertical_bias="0.027" />
 
     <Button
         android:id="@+id/login"
@@ -174,7 +183,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/seekBarLoginAgg"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ProgressBar
         android:id="@+id/loading"
