--- a/frontend/app/src/main/res/layout/activity_search_results.xml
+++ b/frontend/app/src/main/res/layout/activity_search_results.xml
@@ -10,7 +10,7 @@ https://stackoverflow.com/questions/60478873/make-a-leaderboard-using-a-listview
     android:id="@+id/search_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchResultsActivity">
+    tools:context=".ui.search.SearchResultsActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="fill_parent"
@@ -19,7 +19,7 @@ https://stackoverflow.com/questions/60478873/make-a-leaderboard-using-a-listview
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:context=".SearchResultsActivity">
+        tools:context=".ui.search.SearchResultsActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
