--- a/frontend/app/src/main/res/values-night/themes.xml
+++ b/frontend/app/src/main/res/values-night/themes.xml
@@ -2,16 +2,27 @@
     <!-- Base application theme. -->
     <style name="Theme.Tyfw" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/khaki</item>
-        <item name="colorPrimaryVariant">@color/khaki</item>
-        <item name="colorOnPrimary">@color/white_smoke</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryVariant">@color/colorPrimary</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="textFillColor">@color/white_smoke</item>
     </style>
+    <style name="Theme.Tyfw.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.Tyfw.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:fontFamily">@font/proxima_nova_regular</item>
+        <item
+            name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
 </resources>
